--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-awesome-lightbox": "^1.8.1",
     "react-bootstrap": "^2.5.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
