--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.5.0",
     "react-data-table-component": "^7.5.3",
     "react-dom": "^18.2.0",
+    "react-full-screen": "^1.1.1",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
