--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "apexcharts": "^3.35.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "datatables.net": "^1.13.1",
+    "datatables.net-buttons": "^2.3.2",
+    "datatables.net-buttons-dt": "^2.3.2",
+    "datatables.net-dt": "^1.13.1",
+    "jquery": "^3.6.1",
+    "jszip": "^3.10.1",
     "moment": "^2.29.4",
+    "pdfmake": "^0.2.6",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-awesome-lightbox": "^1.8.1",
@@ -23,6 +30,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.6.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-persist-expire": "^1.1.1",
